manifest/httpbin-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "4"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"httpbin-test","namespace":"apps"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"httpbin-test"}},"template":{"metadata":{"annotations":{"sidecar.istio.io/inject":"true","sidecar.istio.io/proxyMetadata":"{\"ISTIO_META_WORKLOAD_SOCKET_PATH\": \"/run/secrets/workload-spiffe-uds/socket\"}","sidecar.istio.io/userVolume":"[{\"name\":\"workload-socket\", \"csi\":{\"driver\":\"csi.spiffe.io\", \"readOnly\":tru [...]
  creationTimestamp: "2026-02-12T22:56:47Z"
  generation: 4
  name: httpbin-test
  namespace: apps
  resourceVersion: "1454869"
  uid: 577710d6-ed7e-4d6a-871a-07ec6e14d132
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: httpbin-test
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2026-02-12T20:20:19-03:00"
        sidecar.istio.io/inject: "true"
        sidecar.istio.io/proxyMetadata: '{"ISTIO_META_WORKLOAD_SOCKET_PATH": "/run/secrets/workload-spiffe-uds/socket",
          "PILOT_CERT_PROVIDER": "custom"}'
        sidecar.istio.io/userVolume: '[{"name":"workload-socket", "csi":{"driver":"csi.spiffe.io",
          "readOnly":true}}, {"name":"spire-bundle", "configMap":{"name":"spire-bundle"}}]'
        sidecar.istio.io/userVolumeMount: '[{"name":"workload-socket", "mountPath":"/run/secrets/workload-spiffe-uds",
          "readOnly":true}, {"name":"spire-bundle", "mountPath":"/var/run/secrets/spire-bundle",
          "readOnly":true}]'
      labels:
        app: httpbin-test
        spiffe.io/spire-managed-identity: "true"
    spec:
      containers:
      - image: docker.io/kennethreitz/httpbin
        imagePullPolicy: Always
        name: httpbin
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: httpbin-test
      serviceAccountName: httpbin-test
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2026-02-12T22:57:49Z"
    lastUpdateTime: "2026-02-12T22:57:49Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2026-02-12T22:56:47Z"
    lastUpdateTime: "2026-02-12T23:20:27Z"
    message: ReplicaSet "httpbin-test-8575849844" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 4
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
