manifest/echo-spire.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-spire
  namespace: apps
spec:
  ports:
  - port: 80
    targetPort: 5678
    name: http
  selector:
    app: echo-spire
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-spire
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-spire
  template:
    metadata:
      labels:
        app: echo-spire
        spiffe.io/spire-managed-identity: "true"
    spec:
      containers:
      - name: echo
        image: hashicorp/http-echo
        args:
        - "-text=hello-spiffe"
        - "-listen=:5678"
        ports:
        - containerPort: 5678
