manifest/httpbin-test-simple.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin-test
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin-test
  template:
    metadata:
      labels:
        app: httpbin-test
      annotations:
        # This is the "magic" line that applies the SPIRE configuration
        inject.istio.io/templates: "sidecar,spire"
    spec:
      serviceAccountName: httpbin-test
      containers:
      - name: httpbin
        image: docker.io/kennethreitz/httpbin
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin-test
  namespace: apps
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 80
  selector:
    app: httpbin-test
